# ChangeLog for x11-plugins/wmauda
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmauda/ChangeLog,v 1.15 2010/06/20 17:05:34 ssuominen Exp $

  20 Jun 2010; Samuli Suominen <ssuominen@gentoo.org> wmauda-0.7.ebuild,
  +files/wmauda-0.7-asneeded.patch:
  Fix building with -Wl,--as-needed wrt #320795 by Kacper Kowalik.

  16 Aug 2009; Petteri Räty <betelgeuse@gentoo.org> wmauda-0.7.ebuild:
  Raise audacious dependency to >=1.5 so we can drop the built_with_use
  call.

  11 Mar 2009; Michele Noberasco <s4t4n@gentoo.org> wmauda-0.7.ebuild:
  Changed audacious dbus USE flag check to work if audacious does not
  have the flag (recent versions no longer have it since dbus support
  is always enabled for them). Thanks to flameeyes for the tip.
  Closes bug #250598.

  31 Jan 2008; Samuli Suominen <drac@gentoo.org> -wmauda-0.3.ebuild:
  Removed old version which only works with Audacious 1.3

  15 Jan 2008; Christian Faulhammer <opfer@gentoo.org> wmauda-0.7.ebuild:
  stable x86, bug 198820

  14 Jan 2008; Samuli Suominen <drac@gentoo.org> wmauda-0.7.ebuild:
  Check for use dbus in audacious, needed both compile and runtime. Depend on
  pkg-config wrt #205084.

  10 Nov 2007; Christian Birchinger <joker@gentoo.org> wmauda-0.7.ebuild:
  Remove built-with dbus check because Audacious has a hard dependency on it now.

*wmauda-0.7 (10 Nov 2007)

  10 Nov 2007; Christian Birchinger <joker@gentoo.org> +wmauda-0.7.ebuild:
  Added new version for Audacious 1.4 and dbus. Limited dependency for
  previous version to 1.3.

  13 Apr 2007; Michele Noberasco <s4t4n@gentoo.org> wmauda-0.3.ebuild:
  Stable for x86.
  wmauda-0.3.ebuild, wmauda-0.2.ebuild:
  Fixed IUSE.
  wmauda-0.2.ebuild:
  Wiped out previous unstable version.
  metadata.xml:
  Fixed maintainership.

  03 Feb 2007; Steve Dibb <beandog@gentoo.org> wmauda-0.2.ebuild,
  wmauda-0.3.ebuild:
  Add ~amd64, bug 153549

*wmauda-0.3 (31 Oct 2006)
