@@ -1,6 +1,10 @@
 # ChangeLog for x11-plugins/wmauda
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmauda/ChangeLog,v 1.15 2010/06/20 17:05:34 ssuominen Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmauda/ChangeLog,v 1.16 2011/06/06 19:57:26 voyageur Exp $
+
+  06 Jun 2011; Bernard Cafarelli <voyageur@gentoo.org>
+  files/wmauda-0.7-asneeded.patch:
+  Update as-needed patch to fix underlinking problem, bug #369889
 
   20 Jun 2010; Samuli Suominen <ssuominen@gentoo.org> wmauda-0.7.ebuild,
   +files/wmauda-0.7-asneeded.patch:
